content/docs/2.6.2/data-variables.adoc
= Data Variables
Jonathan Bullock
2018-04-15
:jbake-type: page
:jbake-tags: documentation
:jbake-status: published
:idprefix:

== Data Model

A data model is exposed to each of the templates (regardless of what template engine you use) allowing you to get access to the data parsed from within
the content files, the model can also be used to apply logic to the output from the templates.

=== Global

These data variables are available to all templates regardless.

- `version` = version of JBake being used
- `published_date` = date baking took place
- `[type]s` = collection of all content of [type] (e.g. posts = all content of type=post or snippets = all content of type=snippet)
- `published_content` = collection of all published content (regardless of the type)
- `published_posts` = collection of just published posts in date descending order
- `published_pages` = collection of just published pages in date descending order
- `all_content` = collection of all content (regardless of type)
- `alltags` = collection of all tags used across all published content
- `tags` = collection of all tags as `tag` data model. See <<Tag Data model>>.
- `content.rootpath` = path to root of project (to be used for relative path to assets)
- `config.[option]` = map of configuration data
- `db` = alias for direct access to https://github.com/jbake-org/jbake/blob/master/src/main/java/org/jbake/app/ContentStore.java[ContentStore] class

WARNING: The `db` variable provides direct access to the methods of the class which are subject to change without warning!

All the configuration options are available with any `.` in the property being replaced with `_`.
For example `template.index.file=index.ftl` is available via `config.template_index_file`.

In your templates you can loop through any of the collections above in the templates, and access a map of values for each element like so: `content.[value]`
all of the metadata header fields are available such as `content.title` along with the body of the content file `content.body`.

==== Tag Data model
Global variable `tags` represent a collection of all tags. Each tag in this collection is represented by a map containing following attributes -

- `name` : Name of the tag, as specified in source file.
- `uri` : Relative path starting <<Default tag output directory>>. For example, if tag output directory is defined as `tags` then uri for a sample tag `java` would be `tags/java.html`.
- `tagged_posts` : Represents subset of `published_posts` collection with posts tagged with this tag.
- `tagged_documents` : Represents subset of `published_content` collection with documents tagged with this tag.


=== Page / Post / Custom

These predefined templates as well as any custom templates you create yourself have the following data available to them:

- `content.[value]` = map of file contents

All of the metadata header fields are available such as `content.title` and the body of the file is available via `content.body`.

In the map you also have access to:

- `content.file` = the full path to the source file
- `content.uri` = the URI for the baked file

Two navigational metadata fields are available in `content`. Both of these fields hold a map with three attributes to represent previous/next post/page/custom entry - `noExtensionUri`, `uri` and `title`.

- `content.previousContent`
- `content.nextContent`

For example, uri of next post can be accessed as `content.nextContent.uri`.

WARNING: `previousContent` and `nextContent` can be `null` when there is no previous/next content, e.g. on very first entry or last entry. `uri` and `noExtensionUri` are relative to the `rootPath`.

=== Index

This predefined template has the following extra data variables available to it related to paging:

- `nextFileName` = if this variable exists it provides the filename of the next page
- `previousFileName` = if this variable exists it provides the filename of the previous page
- `numberOfPages` = if this variable exists it provides the total number of pages (_since 2.5.1_)
- `currentPageNumber` = if this variable exists it provides the current number of the page (_since 2.5.1_)

These variables allow you provide next and previous links in your template to navigate through the pages.

NOTE: As indicated, these variables may not exist so you should check first before referring to it.

=== Tags

This predefined template has the following extra data available to it:

- `tag` = tag being rendered
- `tag_posts` = collection of published posts for tag in date descending order
- `tagged_documents` = collection of published documents (regardless of type) for tag in date descending order

==== Tags Index

It is possible to generate Index page for the <<Default tag output directory>> by setting `render.tagsindex` to `true` (default is `false`) in jbake.properties file.

When enabled, JBake will use the template file defined by `template.tagsindex.file` to generate tags index. This can be helpful to render a all tags home page, like http://localhost:8820/tags/.
